chore: Add favicon to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SayHey - Emotional Support Chatbot</title>
     <meta name="description" content="SayHey - Your friendly emotional support chatbot companion" />
     <meta name="author" content="SayHey Team" />
+    <link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/rXD6wtX2qIjT-dtE0wij9jtgV-ljXKG_ik5Tkm6CsnxAMz8ddqscRoSE9Hb9wDA8TqNU=w240-h480-rw" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
